--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,83 @@
+# ==================================
+# FourT Helper - Gitignore
+# ==================================
+
+# ==================================
+# SENSITIVE FILES - NEVER COMMIT!
+# ==================================
+
+# Environment variables (API keys, secrets, bank info)
+# .env
+# .env.*
+# !.env.example
+
+# Server configuration (contains runtime secrets)
+server_config.json
+backend/
+cloudflare/
+bore/
+ngrok/
+run_server.py
+run_admin.bat
+test_ui.py
+update_info.json
+core/config.py
+
+# Database files
+data/
+*.db
+*.sqlite
+*.sqlite3
+.env
+wwm_combos
+wwm_resources
+# ==================================
+# BUILD ARTIFACTS
+# ==================================
+
+# PyInstaller
+build/
+dist/
+*.spec
+
+# Nuitka
+*.build/
+*.onefile-build/
+nuitka-crash-report.xml
+
+# Build scripts
+build_*.ps1
+installer.iss
+git.sh
+
+
+# Executables
+*.exe
+*.msi
+
+# Installer output
+FourT_Setup.exe
+
+# ==================================
+# LARGE BINARY FILES / ADDONS
+# ==================================
+
+# Addons folder (tesseract, etc. - too large for git)
+addons/
+
+# Bore tunnel executable
+bore/
+
+# Macros (user-specific)
+macros/
+
+# User MIDI files
+midi_files/
+
+# ==================================
+# PYTHON ARTIFACTS
+# ==================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -8,9 +88,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -26,17 +104,76 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
 
-# Installer logs
+# ==================================
+# IDE / EDITOR
+# ==================================
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# PyCharm / JetBrains
+.idea/
+
+# Spyder
+.spyderproject
+.spyproject
+
+# Rope
+.ropeproject
+
+# ==================================
+# OS FILES
+# ==================================
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+# Windows
+ehthumbs.db
+Thumbs.db
+Desktop.ini
+
+# ==================================
+# LOGS & TEMPORARY FILES
+# ==================================
+
+# Logs
+*.log
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Temporary files
+*.tmp
+*.temp
+~*
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# Update temp files
+update.zip
+update_temp/
+update.bat
+
+# ==================================
+# TEST / COVERAGE
+# ==================================
+
 htmlcov/
 .tox/
 .nox/
@@ -51,131 +188,69 @@ coverage.xml
 .pytest_cache/
 cover/
 
-# Translations
-*.mo
-*.pot
+# ==================================
+# MISC
+# ==================================
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+# Local configuration
+config.local.json
+settings.local.json
 
-# Flask stuff:
-instance/
-.webassets-cache
+# Package managers
+.pdm.toml
+__pypackages__/
 
-# Scrapy stuff:
-.scrapy
+# Celery
+celerybeat-schedule
+celerybeat.pid
 
-# Sphinx documentation
+# SageMath
+*.sage.py
+
+# Jupyter
+.ipynb_checkpoints
+
+# Sphinx
 docs/_build/
 
 # PyBuilder
 .pybuilder/
 target/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
 # mypy
 .mypy_cache/
 .dmypy.json
 dmypy.json
 
-# Pyre type checker
+# Pyre
 .pyre/
 
-# pytype static type analyzer
+# pytype
 .pytype/
 
-# Cython debug symbols
+# Cython
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# mkdocs
+/site
 
-# Ruff stuff:
-.ruff_cache/
+# Translations
+*.mo
+*.pot
 
-# PyPI configuration file
-.pypirc
+# Old/temp docs
+AUTO_UPDATE_GUIDE.md
+AUTO_UPDATE_RELEASE.md
+favicon_io.zip
+admin_manifest.xml
 
-# Cursor  
-#  Cursor is an AI-powered code editor.`.cursorignore` specifies files/directories to 
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
+# ==================================
+# OPTIONAL - Uncomment if needed
+# ==================================
+
+# Compressed files (releases)
+# *.zip
+# *.tar.gz
+
+# Test folder
+# test/
