add i18n, fix issue on web

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,33 @@
-# FourT Helper - Environment Variables Example
-# Copy this file to .env and fill in the values
+LICENSE_SERVER_URL=
+UPDATE_SERVER_URL=
+PUBLIC_URL=
+# Sepay Configuration (for auto payment verification)
+# Get these from https://my.sepay.vn after registration
+SEPAY_ACCOUNT_NUMBER=
+SEPAY_API_KEY=
 
-# ==================== SERVER CONFIGURATION ====================
-# Demo license key (server-side only - NEVER hardcode in client)
-DEMO_LICENSE_KEY=your_demo_key_here
-
-# Tunnel type: cloudflare, ngrok, bore, localhost.run, none
-TUNNEL_TYPE=ngrok
-
-# ==================== PAYMENT CONFIGURATION ====================
-# Bank information for VietQR
+# Bank Configuration for VietQR
 BANK_ID=
 BANK_ACCOUNT=
 BANK_NAME=
 
-# Package prices (VND)
-BASIC_PRICE=20000
-PLUS_PRICE=35000
-PRO_PRICE=55000
-PREMIUM_PRICE=89000
+BASIC_PRICE=
+PLUS_PRICE=
+PRO_PRICE=
+PREMIUM_PRICE=
 
-# ==================== SEPAY CONFIGURATION ====================
-# Sepay.vn - Automatic bank transaction verification
-SEPAY_ACCOUNT_NUMBER=
-SEPAY_API_KEY=
+# Tunnel Configuration
+# Options: cloudflare (recommended), ngrok, bore, none
+TUNNEL_TYPE=
 
-# ==================== CLOUDFLARE TUNNEL ====================
-# Only needed if using Cloudflare Tunnel
-CLOUDFLARE_TUNNEL_NAME=fourtapi
-CLOUDFLARE_TUNNEL_URL=https://fourt.io.vn
-
-# ==================== NGROK ====================
-# Optional: ngrok auth token for better rate limits
+# ngrok - Get from https://dashboard.ngrok.com/get-started/your-authtoken
 NGROK_AUTHTOKEN=
+
+# Cloudflare Tunnel (Named Tunnel - fourt.io.vn)
+# Quick tunnel: comment out these lines (random URL, needs npoint.io update)
+# Named tunnel: uncomment these lines (fixed URL, no npoint.io update needed)
+CLOUDFLARE_TUNNEL_NAME=
+CLOUDFLARE_TUNNEL_URL=
+
+# FreeDNS subdomain (legacy - for reference)
+# fourt.chickenkiller.com -> Point CNAME to the tunnel URL
