--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 LICENSE_SERVER_URL=
-UPDATE_SERVER_URL=
+# UPDATE_SERVER_URL không cần - tự động dùng LICENSE_SERVER_URL/update/info
 PUBLIC_URL=
 # Sepay Configuration (for auto payment verification)
 # Get these from https://my.sepay.vn after registration
