--- a/server/server_config.json
+++ b/server/server_config.json
@@ -1,5 +1,6 @@
 {
     "cloudflare_url": "https://fourt.io.vn",
+    "ngrok_url": "https://3309391ac620.ngrok-free.app",
     "server_url": "https://fourt.io.vn",
-    "updated_at": "2025-12-27T14:23:04.953531"
+    "updated_at": "2025-12-27T19:24:22.386299"
 }
